--- a/components/Liked/LikedList/index.module.scss
+++ b/components/Liked/LikedList/index.module.scss
@@ -1,11 +1,12 @@
 .likedBlock {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  margin-top: 32px;
-  margin-left: 30px;
+  width: 100vw;
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr; 
+  gap: 0px 0px; 
+  padding: 0 32px;
+  .likedSize {
+  }
 }
 
 .space {
