--- a/components/Liked/index.module.scss
+++ b/components/Liked/index.module.scss
@@ -1,6 +1,33 @@
 .wrapper {
-  h1 {
-    margin-top: 32px;
-    margin-left: 30px;
+  width: 100%;
+  margin: 0 auto;
+ 
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding:32px 32px 0px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    .HeadAndNumber {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
+  .search {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding:0px 32px 0px; 
+  }
+
+  .recommendation {
+    padding:32px 32px 0px; 
   }
 }
